--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,8 @@
                         <div class="card-body">
                             <div class="image-container">
                                 {% if "placeholder" in post.featured_image.url %}
-                                <img class=""
-                                    src="">
+                                <img class="card-img-top"
+                                    src="https://images.pexels.com/photos/12191128/pexels-photo-12191128.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
                                 {% else %}
                                 <img class="card-img-top" src=" {{ post.featured_image.url }}">
                                 {% endif %}
