--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,9 @@
   <meta name="description" content="A blog to discuss cars">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&family=Poppins:wght@300&display=swap"
-    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&family=Road+Rage&display=swap" rel="stylesheet">
   <title>Car Talk</title>
 
   <!-- Bootstrap core Css -->
