--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-<div class="container">
+<section>
+    <p>Make sure you
+    <a href="{% url 'account_login' %}" class="primary action button">
+    login</a> to create a post and like/comment on posts</p>
+    <a href="{% url 'account_signup' %}" class="primary action button">Sign up</a>
+</section>
+<div class="container-fluid">
     <div class="row">
 
         <!-- Blog Entries Column -->
@@ -56,4 +61,4 @@
     </nav>
     {% endif %}
 </div>
-{%endblock%}
+{% endblock %}
