--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&family=Road+Rage&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&family=Road+Rage&display=swap"
+    rel="stylesheet">
   <title>Car Talk</title>
 
   <!-- Bootstrap core Css -->
@@ -45,8 +46,13 @@
             <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
           </li>
           {% if user.is_authenticated %}
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'post-create' %}">Create a post</a>
+          <li class="nav-item-dropdown">
+            <a class="btn btn-secondary dropdown-toggle" href="{% url 'home' %}" role="button"
+             data-bs-toggle="dropdown" araia aria-expanded="false">Vehicles
+            </a>
+            <div class="dropdown-menu bg-light">
+              <a class="dropdown-item" href="{% url 'post-create' %}"></a>
+            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
