--- a/templates/base.html
+++ b/templates/base.html
@@ -31,13 +31,12 @@
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
-<body>
-
+<body class="d-flex flex-column h-100 main-bg">
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="{% url 'home' %}">Car Talk</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+       aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarText">
@@ -46,17 +45,26 @@
             <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
           </li>
           {% if user.is_authenticated %}
-          <li class="nav-item-dropdown">
-            <a class="btn btn-secondary dropdown-toggle" href="{% url 'home' %}" role="button"
-             data-bs-toggle="dropdown" araia aria-expanded="false">Vehicles
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="{% url 'home' %}" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              Vehicles
             </a>
-            <div class="dropdown-menu bg-light">
-              <a class="dropdown-item" href="{% url 'post-create' %}"></a>
-            </div>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="{% url 'home' %}">List</a></li>
+              <li><a class="dropdown-item" href="{% url 'post-create %'}">Create</a></li>
+            </ul>
           </li>
+          {% if user.is_superuser %}
+          <li class="nav-item">
+            <a class="nav-link" aria-label="admin" href="{% url 'admin:index' %}"><i
+              class="fa fa-unlock"></i>Admin</a>
+          </li>
+          {% endif %}
           <li class="nav-item">
             <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
           </li>
+
           {% else %}
           <li class="nav-item">
             <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
@@ -69,7 +77,7 @@
       </div>
     </div>
   </nav>
-
+ 
   <div class="container">
     <div class="row">
       <div class="col-md-8 offset-md-2">
