--- a/templates/PostVehicleForm.html
+++ b/templates/PostVehicleForm.html
@@ -5,7 +5,7 @@
 
 <section class="account-container p-2 mt-2 mx-2">
     {% if user.is authenticated %}
-    <div id="add-vehicle">
+    <div id="add-Vehicle">
         <div class="form-container p-2 mt-2">
             <form class="Create a post" action="." method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
