--- a/templates/add_vehicle.html
+++ b/templates/add_vehicle.html
@@ -4,10 +4,10 @@
 {% load static %}
 
 <section class="account-container p-2 mt-2 mx-2">
-    <div id="add-vehicle">
+    <div id="add-Vehicle">
         {% if user is.authenticated %}
         <div class="form-container">
-            <form action="." class="add-vehicle-form" methid="POST" enctype="multipart/form-data">
+            <form action="." class="add-Vehicle-form" methid="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 {% for fields in form %}
                 <div class="flex mt-2 form-pair">
