Fixed error that was causing form page to not open

--- a/templates/vehicles/post_confirm_delete.html
+++ b/templates/vehicles/post_confirm_delete.html
@@ -4,7 +4,7 @@
 {% load static %}
 
 <section class="account-container p-2 mt-2 mx-2">
-    <div id="delete=Vehicle">
+    <div id="delete-vehicle">
         {% if user.is_authenticated %}
         {% if user == post.author %}
         <h2>Please confirm your post deletion</h2>
