--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
 {% load crispy_forms_tags %}
-{% load static %}
 
 <div class="masthead">
     <div class="container">
@@ -59,10 +59,10 @@
                             <form class="d-inline" action="{% url 'post_like' post.slug %}" method="POST">
                                 {% csrf_token %}
                                 {% if liked %}
-                                <button type="submit" name="Vehiclepost_id" value="{{post.slug}}" class="btn-like"><i
+                                <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like"><i
                                         class="fas fa-heart"></i></button>
                                 {% else %}
-                                <button type="submit" name="Vehiclepost_id" value="{{post.slug}}" class="btn-like"><i
+                                <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like"><i
                                         class="far fa-heart"></i></button>
                                 {% endif %}
                             </form>
