--- a/templates/post_vehicle.html
+++ b/templates/post_vehicle.html
@@ -11,7 +11,7 @@
     <p>Posting as: {{ user.username }}</p>
 
     <form method="POST" enctype="multipart/form-data">
-        {% csrf %}
+        {% csrf_token %}
         {{ form | crispy }}
         <br>
         <input type="submit" class="btn btn-outlined-success button">
