--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -11,7 +11,10 @@
                 <h1 class="post-title">{{ post.title }}</h1>
                 <!-- Post author goes before the | the post's created date goes after -->
                 <p class="post-subtitle">{{ post.author }} | {{ post.created_on }}</p>
-                <a href="{% url 'home' %}">Back</a>
+                {% if post.youtube_link %}
+                <p class="post-subtitle"><a class="posthead-link" target="_blank" href="{{ post youtube_link}}">Video 
+                    clip here</a></p>
+                {% endif %}
             </div>
             <div class="d-none d-md-block col-md-6 masthead-image">
                 <!-- The featured image URL goes in the src attribute -->
