--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -36,14 +36,15 @@
                     {{ post.content | safe }}
                 </p>
                 <span>
+                    
                     {% if user.is_authenticated %}
                     {% if user ==  post.author %}
-                    <h3>Edit post as: {{ user.username }}</h3>
+                    <h3>Edit Post as: {{ user.username }}</h3>
                     <p>Author is: {{ post.author }}</p>
                     <a href="{% url 'post_update' post.slug %}">
                         <button type="submit" class="btn btn-success btn-lg">Edit</button>
                     </a>
-                    <h3>Delete post as: {{ user.username }}:</h3>
+                    <h3>Delete Post as: {{ user.username }}:</h3>
                     <a href="{% url 'post_delete' post.slug %}">
                         <button type="submit" class="btn btn-danger btn-lg">Delete</button>
                     </a>
