--- a/templates/vehicles/post_confirm_delete.html
+++ b/templates/vehicles/post_confirm_delete.html
@@ -1,23 +1,25 @@
 {% extends 'base.html' %}
 {% block content %}
-{% load crispy_forms_tags %}
 {% load static %}
+{% load i18n %}
 
 <section class="account-container p-2 mt-2 mx-2">
     <div id="delete-vehicle">
         {% if user.is_authenticated %}
         {% if user ==  post.author %}
         <h2>Please confirm your post deletion</h2>
+        
         <div class="form-container p-2 mt-2">
-            <form mathod=""POST>
+            <form method="POST">
                 {% csrf_token %}
                 <fieldset class="form-group">
-                    <legend class="border-bottom mb4">Warning - Deleting post</legend>
+                    <legend class="border-bottom mb4">Warning - Deleting Post</legend>
                     <h2>Are you sure you want to delete post "{{ object.title }}"</h2>
                 </fieldset>
+                
                 <button class="btn btn-outline-danger primary-action mt-2" type="submit">Yes, delete</button>
                 <a class="btn btn-outline-success mt-2" href="{% url 'home' %}">Cancel</a>
-                <a class="btn btn-outline-secondary mt-2" href="/">Home page</a>
+                <a class="btn btn-outline-secondary mt-2" href="/">Home Page</a>
             </form>
         </div>
         {% else %}
@@ -27,4 +29,5 @@
         <h2>You are not logged in for post deletion</h2>
         {% endif %}
     </div>
+    
     {% endblock %}
