Added footer to html page and added posts to blog

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,11 @@ body {
     font-family: 'Road Rage', cursive;
 }
 
+.fab {
+    color: black;
+    font-size: 1.6rem;
+}
+
 .card {
     border: none;
     background-color: transparent;
