--- a/templates/base.html
+++ b/templates/base.html
@@ -96,16 +96,41 @@
     {% endblock content %}
   </main>
 
-  <footer class="footer mt-auto py-3 dark-bg">
-    <p class="m-0 text-center text-white">Follow to stay connected
-    <a href="https://www.facebook.com/" target="_blank" class="btn btn-floating bt-lg text-white">
-      <i class="fa-brands fa-facebook"></i></a>
-    <a href="https://twitter.com/" target="_blank" class="btn btn-floating bt-lg text-white">
-      <i class="fa-brands fa-twitter"></i></a>
-    <a href="https://www.instagram.com/" target="_blank" class="btn btn-floating bt-lg text-white">
-      <i class="fa-brands fa-instagram"></i></a>
-    <a href="https://www.youtube.com/" target="_blank" class="btn btn-floating bt-lg text-white">
-      <i class="fa-brands fa-youtube"></i></a></p>
+  <footer class="bg-light text-center text-white">
+    <!-- Grid container -->
+    <div class="container p-4 pb-0">
+      <!-- Section: Social media -->
+      <p class="m-0 text-center text-dark">Follow us on:</p>
+      <section class="mb-4">
+        <!-- Facebook -->
+        <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/" role="button"
+          ><i class="fab fa-facebook-f"></i
+        ></a>
+  
+        <!-- Twitter -->
+        <a class="btn btn-outline-light btn-floating m-1" href="https://twitter.com/" role="button"
+          ><i class="fab fa-twitter"></i
+        ></a>
+  
+        <!-- Instagram -->
+        <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/" role="button"
+          ><i class="fab fa-instagram"></i
+        ></a>
+  
+        <!-- Linkedin -->
+        <a class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/" role="button"
+          ><i class="fab fa-linkedin-in"></i
+        ></a>
+  
+        <!-- Github -->
+        <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/" role="button"
+          ><i class="fab fa-github"></i
+        ></a>
+      </section>
+      <!-- Section: Social media -->
+    </div>
+    <!-- Grid container -->
+  
   </footer>
 
   <script>
