Removed text on home page and addded more posts

--- a/templates/vehicles/post_form.html
+++ b/templates/vehicles/post_form.html
@@ -12,10 +12,10 @@
                 {% csrf_token %}
                 <fieldset class="form-group">
                     <legend class="border-bottom mb4">Edit post</legend>
-                    {{form | crispy}}
+                    {{form | crispy }}
                 </fieldset>
                 <div class="form-group">
-                    <button class="btn btn-outline" type="submit">Submit</button>
+                    <button class="btn btn-outline-success" type="submit">Submit</button>
                 </div>
             </form>
         </div>
