--- a/templates/vehicles/post_confirm_delete.html
+++ b/templates/vehicles/post_confirm_delete.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% load static %}
 {% load i18n %}
-
+<!-- Confirming post deletion -->
 <section class="account-container p-2 mt-2 mx-2">
     <div id="delete-vehicle">
         {% if user.is_authenticated %}
