--- a/templates/PostVehicleForm.html
+++ b/templates/PostVehicleForm.html
@@ -7,6 +7,7 @@
     {% if user.is authenticated %}
     <div id="add-vehicle">
         <div class="form-container p-2 mt-2">
+             <!-- Mulitipart/form-data to get form to work -->
             <form class="add-vehicle-form" action="." method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form.as_p }}
