--- a/templates/post_vehicle.html
+++ b/templates/post_vehicle.html
@@ -3,13 +3,14 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
+<!-- If user is authenticated show form, else show login/register page link -->
 {% if user.is authenticated %}
 <div class="container col-8 mb-3 p-5 rounded shadow">
     <h5 class="text-center">Let's add your car!</h5>
     <hr class="red">
 
     <p>Posting as: {{ user.username }}</p>
-
+    <!-- Mulitipart/form-data to get form to work -->
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form | crispy }}
