Fixing small errors in html for html validator

--- a/templates/base.html
+++ b/templates/base.html
@@ -98,13 +98,13 @@
     {% endblock content %}
   </main>
 
-  <!-- Footer --->
+  <!-- Footer -->
   <footer class="text-center text-white">
     <!-- Grid container -->
     <div class="container p-4 pb-0">
       <!-- Section: Social media -->
       <p class="m-0 text-center text-dark">Follow us on:</p>
-      <section class="mb-4">
+      <div class="mb-4">
         <!-- Facebook -->
         <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/" role="button"
           ><i class="fab fa-facebook-f"></i
@@ -129,7 +129,7 @@
         <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/" role="button"
           ><i class="fab fa-github"></i
         ></a>
-      </section>
+      </div>
       <!-- Section: Social media -->
     </div>
     <!-- Grid container -->
